--- a/ToDoLocal/style.css
+++ b/ToDoLocal/style.css
@@ -54,6 +54,15 @@ button:hover {
   background-color: #e67e22; 
 }
 
+#search {
+  width: 100%;
+  padding: 10px;
+  margin: 15px 0 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 15px;
+}
+
 ul {
   list-style: none;
   padding: 0;
